--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -1,6 +1,10 @@
 name: 'Terraform (production)'
 
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+  push:
+    branches:
+      - 'main'
 
 concurrency: ${{ github.workflow }}  # Prevents more than one instance of this workflow running at the same time
 
