--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -22,7 +22,10 @@ jobs:
 
     steps:
       - name: 'Checkout Code'
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      - name: 'Install Terraform'
+        uses: hashicorp/setup-terraform@v3
 
       - name: 'Init Terraform'
         run: |
